refactor(palamedes): clean some classes and extract uuid functionality to utils class